# mars_ode_physics

./: CMakeLists.txt  README.md  add_getsetPose.patch  manifest.xml  mars_ode_physics.pc.in
configuration/schema/joints/: fixed_schema.yaml  hinge_schema.yaml
configuration/schema/objects/: box_schema.yaml  cylinder_schema .yaml  inertial_schema.yaml  sphere_schema.yaml
scripts/: reproducable_plot.py  reproducable_test.sh
src/: WorldPhysics.cpp  WorldPhysics.hpp  WorldPhysicsLoader.cpp  WorldPhysicsLoader.hpp  logging.cpp  logging.hpp
src/joints/: FixedJoint.cpp  FixedJoint.hpp  Hinge2Joint.cpp  Hinge2Joint.hpp  HingeJoint.cpp  HingeJoint.hpp  Joint.cpp  Joint.hpp  JointFactory.cpp  JointFactory.hpp  SliderJoint.cpp  SliderJoint.hpp  UniversalJoint.cpp  UniversalJoint.hpp
src/objects/: Box.cpp  Box.hpp  Capsule.cpp  Capsule.hpp  Cylinder.cpp  Cylinder.hpp  Frame.cpp  Frame.hpp  Inertial.cpp  Inertial.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  Sphere.cpp  Sphere.hpp
test/: reproducable_test.cpp
